[project]
name = "logue-ai"
version = "0.1.0"
description = "FastAPI service scaffold with logging and ML-ready dependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"pandas>=2.2.0",
	"pydantic>=2.8.0,<3.0.0",
	"sentence-transformers>=3.0.0",
	"uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
	"pytest>=8.0.0",
]
