[project]
name = "logue-ai"
version = "0.1.0"
description = "FastAPI service scaffold with logging and optional ML dependencies"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"pydantic>=2.8.0,<3.0.0",
	"httpx>=0.28.0",
	"uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
ml = [
	"pandas>=2.2.0",
	"sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[dependency-groups]
dev = [
	"pytest>=8.0.0",
]
